# turtle-harbor

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  REFACTORING_PLAN.md  scripts.yml  test.sh
.github/workflows/: release.yaml
docs/plans/: 20260307-multi-config-support.md  20260509-state-reconcile.md  env-file-support.md
examples/: scripts.yml  test_script.sh
examples/python-script/: .mise.toml  main.py  scripts.yml
scripts/: .env.example
src/: main.rs
src/client/: commands.rs  error.rs  mod.rs  service.rs  updater.rs
src/common/: config.rs  error.rs  ipc.rs  logging.rs  mod.rs  paths.rs
src/config/: mod.rs
src/daemon/: config_manager.rs  cron_manager.rs  daemon_core.rs  health.rs  http_server.rs  log_monitor.rs  loki_shipper.rs  mod.rs  process.rs  process_manager.rs  process_monitor.rs  process_supervisor.rs  scheduler.rs  server.rs  state.rs
