[package]
name = "turtle-harbor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "turtled"
path = "src/bin/turtled.rs"

[[bin]]
name = "th"
path = "src/bin/th.rs"

[dependencies]
anyhow = "1.0.95"
axum = "0.8"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yml = "0.0.12"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "local-time", "json"] }
tracing-appender = "0.2.3"
cron = "0.15.0"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
