[package]
name = "turtle-harbor"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "turtled"
path = "src/bin/turtled.rs"

[[bin]]
name = "th"
path = "src/bin/th.rs"

[dependencies]
anyhow = "1.0.101"
axum = "0.8"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.59", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time", "local-time", "json"] }
tracing-appender = "0.2.4"
cron = "0.15.0"
dirs = "6.0"
libc = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
