[package]
name = "turtle-harbor"
version = "0.6.3"
edition = "2021"

[[bin]]
name = "turtled"
path = "src/bin/turtled.rs"

[[bin]]
name = "th"
path = "src/bin/th.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time", "local-time", "json"] }
tracing-appender = "0.2.5"
cron = "0.16.0"
dirs = "6.0"
libc = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
flate2 = "1"
tar = "0.4"
tempfile = "3"
